ArticleReviewProject/src/main/java/com/example/articlereviewproject/error/ResourceAlreadyExists.java
package com.example.articlereviewproject.error;

public class ResourceAlreadyExists extends RuntimeException{
    public ResourceAlreadyExists(String message) {
        super(message);
    }
}
